<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity"
    android:theme="@style/materialDesign"
    android:background="@color/backgroundColor">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                style="@style/textInputStyle"
                android:layout_marginTop="36dp"
                app:boxStrokeColor="@color/buttonBlackColor"
                app:hintTextColor="@color/buttonBlackColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditText"
                    style="@style/EditTextStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/surnameTextInputLayout"
                style="@style/textInputStyle"
                android:layout_marginTop="24dp"
                app:boxStrokeColor="@color/buttonBlackColor"
                app:hintTextColor="@color/buttonBlackColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surnameEditText"
                    style="@style/EditTextStyle"
                    android:hint="@string/surname" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                style="@style/textInputStyle"
                android:layout_marginTop="24dp"
                app:boxStrokeColor="@color/buttonBlackColor"
                app:hintTextColor="@color/buttonBlackColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    style="@style/EditTextStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPasswordTextInputLayout"
                style="@style/textInputStyle"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                app:boxStrokeColor="@color/buttonBlackColor"
                app:hintTextColor="@color/buttonBlackColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatPasswordEditText"
                    style="@style/EditTextStyle"
                    android:hint="@string/repeatPassword"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/logInButton"
                style="@style/buttonStyle"
                android:layout_marginTop="60dp"
                android:text="@string/create" />

            <LinearLayout
                android:id="@+id/bottomTextLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="32dp">

                <TextView
                    android:id="@+id/haveAccountTextView"
                    style="@style/textViewStyle"
                    android:text="@string/haveAccountQuestion" />

                <TextView
                    android:id="@+id/loginTextView"
                    style="@style/textViewStyle"
                    android:layout_marginStart="4dp"
                    android:text="@string/logIn"
                    android:textColor="@color/blueLinesColor" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>