<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditNoteActivity"
    android:background="@color/backgroundColor"
    android:theme="@style/materialDesign">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTextView"
                style="@style/textViewStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/titleEditText"
                style="@style/basicEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:hint="@string/enterTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTextInputLayout"
                style="@style/textInputStyle"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/hintColor"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterTextColor="@color/black"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleEditText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    style="@style/EditTextStyle"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLength="50"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/dateEditText"
                style="@style/basicEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/dateOfDoingTask"
                android:inputType="date"
                android:longClickable="false"
                app:layout_constraintEnd_toStartOf="@+id/dateImageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextInputLayout" />

            <ImageButton
                android:id="@+id/dateImageButton"
                android:layout_width="62dp"
                android:layout_height="0dp"
                android:background="@color/backgroundColor"
                app:layout_constraintBottom_toBottomOf="@+id/dateEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dateEditText"
                app:srcCompat="@drawable/ic_new_date" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_selector"
                android:dropDownSelector="@drawable/spinner_selector"
                android:elevation="4dp"
                android:popupBackground="@drawable/spinner_shape"
                app:layout_constraintEnd_toStartOf="@+id/addCategoryImageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateEditText" />

            <ImageView
                android:id="@+id/categoryArrowImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/categorySpinner"
                app:layout_constraintEnd_toEndOf="@+id/categorySpinner"
                app:layout_constraintTop_toTopOf="@+id/categorySpinner"
                app:srcCompat="@drawable/ic_spinner_arrow" />

            <ImageButton
                android:id="@+id/addCategoryImageButton"
                android:layout_width="62dp"
                android:layout_height="0dp"
                android:background="@color/backgroundColor"
                app:layout_constraintBottom_toBottomOf="@+id/categorySpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/categorySpinner"
                app:srcCompat="@drawable/ic_add_box" />

            <Spinner
                android:id="@+id/prioritySpinner"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/spinner_selector"
                android:elevation="4dp"
                android:popupBackground="@drawable/spinner_shape"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinner"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/priorityArrowImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/prioritySpinner"
                app:layout_constraintEnd_toEndOf="@+id/prioritySpinner"
                app:layout_constraintTop_toTopOf="@+id/prioritySpinner"
                app:srcCompat="@drawable/ic_spinner_arrow" />

            <Button
                android:id="@+id/saveButton"
                style="@style/buttonStyle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prioritySpinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>